--- a/w8-donor/DonorAppW8/GroupedItemsPage.xaml
+++ b/w8-donor/DonorAppW8/GroupedItemsPage.xaml
@@ -139,12 +139,14 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- Сетка с горизонтальной прокруткой используется в большинстве состояний представления -->
-        <GridView
+        <SemanticZoom Grid.RowSpan="2">
+            <SemanticZoom.ZoomedInView>
+                <!-- Сетка с горизонтальной прокруткой используется в большинстве состояний представления -->
+                <GridView
             x:Name="itemGridView"
             AutomationProperties.AutomationId="ItemGridView"
             AutomationProperties.Name="Grouped Items"
-            Grid.RowSpan="2"
+            
             Margin="0,20,0,0"
             Padding="116,137,40,46"
             ItemsSource="{Binding Source={StaticResource groupedItemsViewSource}}"
@@ -154,41 +156,72 @@
             IsItemClickEnabled="True"
             ItemClick="ItemView_ItemClick">
 
-            <GridView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VariableSizedWrapGrid Orientation="Vertical"/>
-                </ItemsPanelTemplate>
-                <!--<ItemsPanelTemplate>                        
+                    <GridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VariableSizedWrapGrid Orientation="Vertical"/>
+                        </ItemsPanelTemplate>
+                        <!--<ItemsPanelTemplate>                        
                     <VirtualizingStackPanel Orientation="Horizontal"/>
                 </ItemsPanelTemplate>-->
-            </GridView.ItemsPanel>
-            <GridView.GroupStyle>
-                <GroupStyle>
-                    <GroupStyle.HeaderTemplate>
-                        <DataTemplate>
-                            <Grid Margin="1,0,0,6">
-                                <Button
+                    </GridView.ItemsPanel>
+                    <GridView.GroupStyle>
+                        <GroupStyle>
+                            <GroupStyle.HeaderTemplate>
+                                <DataTemplate>
+                                    <Grid Margin="1,0,0,6">
+                                        <Button
                                     AutomationProperties.Name="Group Title"
                                     Click="Header_Click"
                                     Style="{StaticResource TextPrimaryButtonStyle}" >
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{Binding Title}" Margin="3,-7,10,10" Style="{StaticResource GroupHeaderTextStyle}" />
-                                        <TextBlock Text="{StaticResource ChevronGlyph}" FontFamily="Segoe UI Symbol" Margin="0,-7,0,10" Style="{StaticResource GroupHeaderTextStyle}"/>
-                                    </StackPanel>
-                                </Button>
-                            </Grid>
-                        </DataTemplate>
-                    </GroupStyle.HeaderTemplate>
-                    <GroupStyle.Panel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Title}" Margin="3,-7,10,10" Style="{StaticResource GroupHeaderTextStyle}" />
+                                                <TextBlock Text="{StaticResource ChevronGlyph}" FontFamily="Segoe UI Symbol" Margin="0,-7,0,10" Style="{StaticResource GroupHeaderTextStyle}"/>
+                                            </StackPanel>
+                                        </Button>
+                                    </Grid>
+                                </DataTemplate>
+                            </GroupStyle.HeaderTemplate>
+                            <GroupStyle.Panel>
+                                <ItemsPanelTemplate>
+                                    <VariableSizedWrapGrid Orientation="Vertical" Margin="0,0,80,0" MaximumRowsOrColumns="9"/>
+                                </ItemsPanelTemplate>
+                            </GroupStyle.Panel>
+                        </GroupStyle>
+                    </GridView.GroupStyle>
+                </GridView>
+            </SemanticZoom.ZoomedInView>
+            <SemanticZoom.ZoomedOutView>
+                <GridView 
+                    x:Name="zommedOutView"
+                    Grid.RowSpan="2"                            
+                    Padding="116,137,40,46"
+                    SelectionMode="None">
+                    <GridView.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <VariableSizedWrapGrid Orientation="Vertical" Margin="0,0,80,0" MaximumRowsOrColumns="9"/>
+                            <WrapGrid Margin="0,0,80,0" ItemWidth="400" ItemHeight="400" 
+                                MaximumRowsOrColumns="1" VerticalAlignment="Center"/>
                         </ItemsPanelTemplate>
-                    </GroupStyle.Panel>
-                </GroupStyle>
-            </GridView.GroupStyle>
-        </GridView>
+                    </GridView.ItemsPanel>
+                    <GridView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid HorizontalAlignment="Right">
+                                <Border Background="{StaticResource ListViewItemPlaceholderBackgroundThemeBrush}">
+                                    <Image Stretch="UniformToFill" 
+                                        AutomationProperties.Name="{Binding Group.Title}" Source="Assets/LightGray.png"/>
+                                </Border>
+                                <StackPanel Background="{StaticResource ListViewItemOverlayBackgroundThemeBrush}" VerticalAlignment="Top">
+                                    <TextBlock Text="{Binding Group.Title}" Foreground="White"  
+                       Style="{StaticResource ExtendedTitleTextStyle}" Height="90" Margin="15,0,15,0" FontSize="30" />
+                                </StackPanel>
+                            </Grid>
+                            <!--<TextBlock Text="{Binding Title}" Style="{StaticResource HeaderTextStyle}" />-->
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
+            </SemanticZoom.ZoomedOutView>
+        </SemanticZoom>
 
-        <!-- Список с вертикальной прокруткой используется только в прикрепленном представлении -->
+            <!-- Список с вертикальной прокруткой используется только в прикрепленном представлении -->
         <ListView
             x:Name="itemListView"
             AutomationProperties.AutomationId="ItemListView"
