--- a/w8-donor/DonorAppW8/Pages/Stations/StationDetailPage.xaml
+++ b/w8-donor/DonorAppW8/Pages/Stations/StationDetailPage.xaml
@@ -38,13 +38,20 @@
             сведения об одном элементе, что позволяет пользователю перемещаться между всеми элементами в выбранной
             группе
         -->
+
+        <bm:Map MinHeight="460" Grid.Column="0" Grid.Row="1" Width="400" Height="Auto" Tag="{Binding Name}"
+                                       Margin="117,20,20,47" Name="map"                
+                                       Credentials="AsqrQmbS1KDNegV3DX6dFn0hQrFsDryl71O0gvH_Uk8M1A-u3gSjT-qolzYRp-SK" 
+                                       ZoomLevel="14" Heading="14" VerticalAlignment="Top" 
+                                       HorizontalAlignment="Left" Loaded="map_Loaded" Canvas.ZIndex="2"/>
+
         <FlipView Margin="0,20,0,0"
             x:Name="flipView"
             AutomationProperties.AutomationId="ItemsFlipView"
             AutomationProperties.Name="Item Details"
             TabIndex="1"
             Grid.RowSpan="2"
-            ItemsSource="{Binding Source={StaticResource itemsViewSource}}">
+            ItemsSource="{Binding Source={StaticResource itemsViewSource}}" Loaded="flipView_Loaded" SelectionChanged="flipView_SelectionChanged">
 
             <FlipView.ItemContainerStyle>
                 <Style TargetType="FlipViewItem">
@@ -61,21 +68,22 @@
                     -->
                     <UserControl Loaded="StartLayoutUpdates" Unloaded="StopLayoutUpdates">
                         <ScrollViewer x:Name="scrollViewer" Style="{StaticResource HorizontalScrollViewerStyle}" Grid.Row="1">
-                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0" Name="ManStackPanel">
-                                <!-- Содержимое может занимать столько столбцов, сколько потребуется -->
-                                <common:RichTextColumns x:Name="richTextColumns" Margin="117,0,20,47" VerticalAlignment="Top" Width="460">
+                            <!--<StackPanel Orientation="Horizontal" Margin="0,10,0,0" Name="ManStackPanel">-->
+                            <Grid Margin="117,0,20,47" Height="Auto" Grid.Column="2">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="420" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <!--<bm:Map MinHeight="460" Width="400" Height="Auto" Tag="{Binding Name}"
+                                        Margin="0,0,20,47" Name="map"
+                                       Credentials="AsqrQmbS1KDNegV3DX6dFn0hQrFsDryl71O0gvH_Uk8M1A-u3gSjT-qolzYRp-SK" 
+                                       ZoomLevel="14" Heading="14" VerticalAlignment="Stretch" 
+                                       HorizontalAlignment="Stretch" Loaded="map_Loaded"/>-->
+
+                                <common:RichTextColumns x:Name="richTextColumns" Margin="20,0,20,47" 
+                                    Grid.Column="1" VerticalAlignment="Top" Width="460">
                                     <RichTextBlock x:Name="richTextBlock" Width="460" Style="{StaticResource ItemRichTextStyle}" IsTextSelectionEnabled="False" VerticalAlignment="Top">
-                                        <!--<Paragraph>
-                                        <Run FontSize="26.667" FontWeight="Light" Text="{Binding Title}"/>
-                                        <LineBreak/>
-                                        <LineBreak/>
-                                        <Run FontWeight="Normal" Text="{Binding Subtitle}"/>
-                                    </Paragraph>
-                                    <Paragraph LineStackingStrategy="MaxHeight">
-                                        <InlineUIContainer>
-                                            <Image x:Name="image" MaxHeight="480" Margin="0,20,0,10" Stretch="Uniform" Source="{Binding Image}" AutomationProperties.Name="{Binding Title}"/>
-                                        </InlineUIContainer>
-                                    </Paragraph>-->
                                         <Paragraph>
                                             <Run FontSize="26.667" FontWeight="SemiBold" 
                                             Foreground="#DF8D4B" 
@@ -163,28 +171,7 @@
                                     </common:RichTextColumns.ColumnTemplate>
                                 </common:RichTextColumns>
 
-                                <common:RichTextColumns x:Name="richTextColumns2" Background="Black" Height="460" Margin="20,0,20,47" VerticalAlignment="Top" HorizontalAlignment="Left" Width="400">
-                                    <RichTextBlock x:Name="richTextBlock2" Width="400" Height="460" IsTextSelectionEnabled="False">
-                                        <Paragraph>
-                                            <InlineUIContainer>
-                                                <bm:Map x:Name="map" MinHeight="460" Width="400" Height="460"
-                                                Credentials="AsqrQmbS1KDNegV3DX6dFn0hQrFsDryl71O0gvH_Uk8M1A-u3gSjT-qolzYRp-SK" 
-                                                ZoomLevel="14" Heading="14" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
-                                            </InlineUIContainer>
-                                        </Paragraph>
-                                    </RichTextBlock>
-                                    <!-- На основании этого шаблона создаются дополнительные столбцы 
-                                    <common:RichTextColumns.ColumnTemplate>
-                                        <DataTemplate>
-                                            <RichTextBlockOverflow Width="400" Height="460" Margin="80,0,0,0">
-                                                <RichTextBlockOverflow.RenderTransform>
-                                                    <TranslateTransform X="-1" Y="4"/>
-                                                </RichTextBlockOverflow.RenderTransform>
-                                            </RichTextBlockOverflow>
-                                        </DataTemplate>
-                                    </common:RichTextColumns.ColumnTemplate>-->
-                                </common:RichTextColumns>
-                            </StackPanel>
+                            </Grid>
 
                             <VisualStateManager.VisualStateGroups>
 
