--- a/Donor/view/controller/modal/picker/HSBloodTypePicker.xib
+++ b/Donor/view/controller/modal/picker/HSBloodTypePicker.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="18256930"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,7 +56,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{9, 195}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="842171197"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -99,7 +97,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{228, 195}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="828419529"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -128,7 +125,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{190, 250}, {100, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="170138256"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -157,7 +153,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{220, 250}, {70, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="979599181"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -181,7 +176,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{50, 250}, {70, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522522793"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -205,7 +199,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{190, 390}, {100, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="115457688"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -228,7 +221,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{220, 390}, {70, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="480893770"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -252,7 +244,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{50, 390}, {109, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="442024803"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -276,7 +267,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{50, 290}, {80, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="342986730"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -299,7 +289,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{80, 290}, {50, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1005784326"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -323,7 +312,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{190, 290}, {80, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="594253308"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -346,7 +334,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{220, 290}, {50, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="461915114"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -370,7 +357,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{190, 330}, {80, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="79952693"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -393,7 +379,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{220, 330}, {50, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="77862775"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -417,7 +402,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{50, 330}, {80, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="270621868"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -440,7 +424,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{80, 330}, {50, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="242020655"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -464,7 +447,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{190, 430}, {80, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="26967513"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -487,7 +469,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{50, 430}, {80, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="555208796"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -510,8 +491,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{220, 430}, {50, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -534,7 +513,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{80, 430}, {50, 40}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="369998046"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -558,7 +536,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{100, 201}, {120, 21}}</string>
 						<reference key="NSSuperview" ref="610863332"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="289853455"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -588,7 +565,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="905215004"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1049,152 +1025,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">76</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">HSBloodTypePicker</string>
-					<string key="superclassName">HSPicker</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="bloodGroupButtonClicked:">id</string>
-						<string key="bloodRhButtonClicked:">id</string>
-						<string key="cancelButtonClicked:">id</string>
-						<string key="doneButtonClicked:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="bloodGroupButtonClicked:">
-							<string key="name">bloodGroupButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="bloodRhButtonClicked:">
-							<string key="name">bloodRhButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="cancelButtonClicked:">
-							<string key="name">cancelButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="doneButtonClicked:">
-							<string key="name">doneButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="buttonBloodGroupA">UIButton</string>
-						<string key="buttonBloodGroupAB">UIButton</string>
-						<string key="buttonBloodGroupB">UIButton</string>
-						<string key="buttonBloodGroupO">UIButton</string>
-						<string key="buttonBloodGroupUnknown">UIButton</string>
-						<string key="buttonBloodRhN">UIButton</string>
-						<string key="buttonBloodRhP">UIButton</string>
-						<string key="buttonBloodRhUnknown">UIButton</string>
-						<string key="labelBloodGroup">UILabel</string>
-						<string key="labelBloodGroupA">UILabel</string>
-						<string key="labelBloodGroupAB">UILabel</string>
-						<string key="labelBloodGroupB">UILabel</string>
-						<string key="labelBloodGroupO">UILabel</string>
-						<string key="labelBloodGroupUnknown">UILabel</string>
-						<string key="labelBloodRh">UILabel</string>
-						<string key="labelBloodRhN">UILabel</string>
-						<string key="labelBloodRhP">UILabel</string>
-						<string key="labelBloodRhUnknown">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="buttonBloodGroupA">
-							<string key="name">buttonBloodGroupA</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodGroupAB">
-							<string key="name">buttonBloodGroupAB</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodGroupB">
-							<string key="name">buttonBloodGroupB</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodGroupO">
-							<string key="name">buttonBloodGroupO</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodGroupUnknown">
-							<string key="name">buttonBloodGroupUnknown</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodRhN">
-							<string key="name">buttonBloodRhN</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodRhP">
-							<string key="name">buttonBloodRhP</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buttonBloodRhUnknown">
-							<string key="name">buttonBloodRhUnknown</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodGroup">
-							<string key="name">labelBloodGroup</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodGroupA">
-							<string key="name">labelBloodGroupA</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodGroupAB">
-							<string key="name">labelBloodGroupAB</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodGroupB">
-							<string key="name">labelBloodGroupB</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodGroupO">
-							<string key="name">labelBloodGroupO</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodGroupUnknown">
-							<string key="name">labelBloodGroupUnknown</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodRh">
-							<string key="name">labelBloodRh</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodRhN">
-							<string key="name">labelBloodRhN</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodRhP">
-							<string key="name">labelBloodRhP</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelBloodRhUnknown">
-							<string key="name">labelBloodRhUnknown</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HSBloodTypePicker.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HSModalViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HSModalViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HSPicker</string>
-					<string key="superclassName">HSModalViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HSPicker.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
