--- a/Donor/view/controller/calendar/HSEventPlanningViewController.xib
+++ b/Donor/view/controller/calendar/HSEventPlanningViewController.xib
@@ -132,9 +132,23 @@
 							<string key="NSResourceName">dottedLine.png</string>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="153528386">
+						<reference key="NSNextResponder" ref="471229315"/>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrame">{{7, 382}, {306, 119}}</string>
+						<reference key="NSSuperview" ref="471229315"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">eventCommentBackground.png</string>
+						</object>
+					</object>
 					<object class="IBUITextView" id="34260992">
 						<reference key="NSNextResponder" ref="471229315"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{7, 382}, {306, 119}}</string>
 						<reference key="NSSuperview" ref="471229315"/>
 						<reference key="NSWindow"/>
@@ -217,7 +231,7 @@
 								<string key="NSFrame">{{1, 87}, {306, 53}}</string>
 								<reference key="NSSuperview" ref="1001598696"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="951031914"/>
+								<reference key="NSNextKeyView" ref="593618196"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -380,6 +394,7 @@
 								<string key="NSFrame">{{4, 90}, {296, 47}}</string>
 								<reference key="NSSuperview" ref="1001598696"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="951031914"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -531,7 +546,7 @@
 								<reference key="IBUIFont" ref="152259055"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{4, 136}, {307, 214}}</string>
+						<string key="NSFrame">{{6, 136}, {307, 214}}</string>
 						<reference key="NSSuperview" ref="471229315"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="767617565"/>
@@ -686,7 +701,7 @@
 						<string key="NSFrame">{{4, 509}, {307, 44}}</string>
 						<reference key="NSSuperview" ref="471229315"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="153528386"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -736,7 +751,6 @@
 						<string key="NSFrameSize">{320, 392}</string>
 						<reference key="NSSuperview" ref="957166677"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -1000,6 +1014,7 @@
 							<reference ref="1053396433"/>
 							<reference ref="863478263"/>
 							<reference ref="100326777"/>
+							<reference ref="153528386"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1193,6 +1208,11 @@
 						<reference key="object" ref="593618196"/>
 						<reference key="parent" ref="1001598696"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">118</int>
+						<reference key="object" ref="153528386"/>
+						<reference key="parent" ref="471229315"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1210,6 +1230,7 @@
 				<string key="110.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="115.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="116.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="118.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1241,7 +1262,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">117</int>
+			<int key="maxID">118</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1359,6 +1380,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="cell.png">{306, 37}</string>
 			<string key="dottedLine.png">{301, 3}</string>
+			<string key="eventCommentBackground.png">{305, 119}</string>
 			<string key="eventCommentIcon.png">{16, 16}</string>
 			<string key="eventPlanningTestBackground.png">{320, 556}</string>
 			<string key="itemArrow.png">{9, 15}</string>
